--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   shared_preferences: ^2.0.5
   dio: ^4.0.0
   webview_flutter: ^2.0.3
+  smooth_page_indicator: ^0.2.0
+  fluttertoast: ^8.0.3
+  carousel_slider: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,6 +69,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+  fonts:
+    - family: Jannah
+      fonts:
+        - asset: assets/fonts/jannah.ttf
+          weight: 700
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
